Kubernetes/Hosting/yamls/ig-hosting1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-external
---
apiVersion: v1
kind: Endpoints
metadata:
  name: websites-hosting1-svc
  namespace: traefik-external
subsets:
- addresses:
  - ip: <IP>
    nodeName: websites-hosting1-svc
  ports:
  - name: http
    port: 80
    protocol: TCP
  - name: https
    port: 443
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: websites-hosting1-svc
  namespace: traefik-external
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: webmin-hosting1-svc
  namespace: traefik-external
subsets:
- addresses:
  - ip: <IP>
    nodeName: webmin1-hosting1-svc
  ports:
  - name: webmin
    port: 2087
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: webmin-hosting1-svc
  namespace: traefik-external
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: webmin
    port: 443
    targetPort: 2087
---
apiVersion: v1
kind: Endpoints
metadata:
  name: usermin-hosting1-svc
  namespace: traefik-external
subsets:
- addresses:
  - ip: <IP>
    nodeName: usermin1-hosting1-svc
  ports:
  - name: usermin
    port: 2083
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: usermin-hosting1-svc
  namespace: traefik-external
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: usermin
    port: 443
    targetPort: 2083
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-hosting1-secureheaders
  namespace: traefik-external
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
    customRequestHeaders:
      X-Forwarded-Proto: "https"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-domain6-it-websecure
  namespace: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`domain6.com`) || Hostregexp(`^(admin|webmail|mail|autodiscover|autoconfig|www)\.domain6\.com`)
      services:
        - name: websites-hosting1-svc
          port: 443
          serversTransport: traefik-domain6-transport
      middlewares:
        - name: traefik-hosting1-secureheaders
  tls:
    secretName: wildcards-hosting1
    options:
      name: traefik-hosting1-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-wp-manager-domain6-it-websecure
  namespace: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`wp-manager.domain6.com`)
      services:
        - name: websites-hosting1-svc
          port: 443
          serversTransport: traefik-wp-manager-domain6-transport
      middlewares:
        - name: traefik-hosting1-secureheaders
  tls:
    secretName: wildcards-hosting1
    options:
      name: traefik-hosting1-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-domain1-it-websecure
  namespace: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`domain1.com`) || Hostregexp(`.+\.domain1\.com`)
      services:
        - name: websites-hosting1-svc
          port: 443
          serversTransport: traefik-domain1-transport
      middlewares:
        - name: traefik-hosting1-secureheaders
  tls:
    secretName: wildcards-hosting1
    options:
      name: traefik-hosting1-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-domain3-it-websecure
  namespace: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`domain3.com`) || Hostregexp(`.+\.domain3\.com`)
      services:
        - name: websites-hosting1-svc
          port: 443
          serversTransport: traefik-domain3-transport
      middlewares:
        - name: traefik-hosting1-secureheaders
  tls:
    secretName: wildcards-hosting1
    options:
      name: traefik-hosting1-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-domain2-it-websecure
  namespace: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`domain2.com`) || Hostregexp(`^(admin|webmail|mail|autodiscover|autoconfig|www)\.domain2\.com`)
      services:
        - name: websites-hosting1-svc
          port: 443
          serversTransport: traefik-domain2-transport
      middlewares:
        - name: traefik-hosting1-secureheaders
  tls:
    secretName: wildcards-hosting1
    options:
      name: traefik-hosting1-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-crm-domain2-it-websecure
  namespace: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`crm.domain2.com`)
      services:
        - name: websites-hosting1-svc
          port: 443
          serversTransport: traefik-crm-domain2-transport
      middlewares:
        - name: traefik-hosting1-secureheaders
  tls:
    secretName: wildcards-hosting1
    options:
      name: traefik-hosting1-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-domain4-eu-websecure
  namespace: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`domain4.com`) || Hostregexp(`.+\.domain4\.com`)
      services:
        - name: websites-hosting1-svc
          port: 443
          serversTransport: traefik-domain4-transport
      middlewares:
        - name: traefik-hosting1-secureheaders
  tls:
    secretName: wildcards-hosting1
    options:
      name: traefik-hosting1-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-domain5-com-websecure
  namespace: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`domain5.com`) || Hostregexp(`.+\.domain5\.com`)  
      services:
        - name: websites-hosting1-svc
          port: 443
          serversTransport: traefik-domain5-transport
      middlewares:
        - name: traefik-hosting1-secureheaders
  tls:
    secretName: wildcards-hosting1
    options:
      name: traefik-hosting1-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-hosting1-webmin
  namespace: traefik-external
spec:
  entryPoints:
    - webmin
  routes:
    - kind: Rule
      match: Host(`domain6.com`) || Hostregexp(`^(admin|webmail|mail|autodiscover|autoconfig|www|wp-manager)\.domain6\.com`) || Hostregexp(`.+\.domain1\.com`) || Hostregexp(`.+\.domain3\.com`) || Hostregexp(`.+\.domain2\.com`) || Hostregexp(`.+\.domain5\.com`) || Hostregexp(`.+\.domain4\.com`) || Host(`domain1.com`) || Host(`domain3.com`) || Host(`domain2.com`) || Host(`domain5.com`) || Host(`domain4.com`)
      services:
        - name: webmin-hosting1-svc
          port: 443
          serversTransport: traefik-hosting1-transport
      middlewares:
        - name: traefik-hosting1-secureheaders
  tls:
    secretName: wildcards-hosting1
    options:
      name: traefik-hosting1-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-hosting1-usermin
  namespace: traefik-external
spec:
  entryPoints:
    - usermin
  routes:
    - kind: Rule
      match: Host(`domain6.com`) || Hostregexp(`^(admin|webmail|mail|autodiscover|autoconfig|www|wp-manager)\.domain6\.com`) || Hostregexp(`.+\.domain1\.com`) || Hostregexp(`.+\.domain3\.com`) || Hostregexp(`.+\.domain2\.com`) || Hostregexp(`.+\.domain5\.com`) || Hostregexp(`.+\.domain4\.com`) || Host(`domain1.com`) || Host(`domain3.com`) || Host(`domain2.com`) || Host(`domain5.com`) || Host(`domain4.com`)
      services:
        - name: usermin-hosting1-svc
          port: 443
          serversTransport: traefik-hosting1-transport
      middlewares:
        - name: traefik-hosting1-secureheaders
  tls:
    secretName: wildcards-hosting1
    options:
      name: traefik-hosting1-tlsoptions
